# cryptrader

./: .dockerignore  .env  .gitignore  1  2000_c1.csv  2000_c1_5.csv  2000_c21.csv  Cargo.toml  Makefile  NOTES.MD  README.MD  aa.json  dp.REMOVED.git-id  dp.plan  out.dot  skaffold.yaml  zcat.py
.cargo/: config
article/: 2019-ExcelFIT-ShortName-bib.bib  2019-ExcelFIT-ShortName.aux  2019-ExcelFIT-ShortName.out  2019-ExcelFIT-ShortName.tex  ExcelAtFIT.cls  Makefile
code/: Cargo.toml
code/actix-net/: Cargo.toml
code/actix-net/src/: lib.rs  prelude.rs
code/actix-net/src/addr/: mod.rs
code/actix-net/src/base/: comm.rs  mod.rs  node.rs
code/app/: Cargo.toml  Makefile
code/app/src/: main.rs  prelude.rs
code/app/src/eval/: mod.rs
code/app/src/exch/: bitfinex.rs  mod.rs
code/app/src/ingest/: decision.rs  mod.rs  rescaler.rs
code/app/src/measure/: mod.rs
code/app/src/trader/: mod.rs
code/bitfinex/: Cargo.toml
code/bitfinex/src/: dump.rs  main.rs  prelude.rs  trade.rs
code/bitfinex/src/api/rest/: mod.rs  types.rs
code/bitfinex/src/api/rest/v1/: mod.rs
code/bitfinex/src/api/rest/v2/: mod.rs
code/bitfinex/src/api/ws/: auth.rs  candles.rs  mod.rs  order.rs  wallets.rs
code/common/: Cargo.toml
code/common/src/: lib.rs  metrics.rs  prelude.rs
code/common/src/msgs/: mod.rs
code/common/src/types/: auth.rs  mod.rs  ohlc.rs  spec.rs  ticker.rs
code/cryptrader/libs/common/: Cargo.toml
code/cryptrader/libs/common/src/: prelude.rs  util.rs  wsock.rs
code/cryptrader/libs/common/src/arch/: conn.rs  worker.rs
code/cryptrader/libs/common/src/arch/ps/: mod.rs
code/cryptrader/libs/common/src/svc_types/: mod.rs  ohlc.rs  ticker.rs
code/cryptrader/libs/common/src/types/: mod.rs  ohlc.rs  wallet.rs
code/cryptrader/libs/db/: Cargo.toml
code/cryptrader/libs/db/src/: lib.rs
code/cryptrader/trader/: Cargo.toml
code/cryptrader/trader/src/: config.rs
code/cryptrader/trader/src/exchange/: bitfinex.rs
code/cryptrader/trader/src/strategy/: lua.rs  mod.rs
code/cryptrader/trader/src/trade/: eval.rs  exec.rs  mod.rs
code/eval/: Cargo.toml  Makefile
code/eval/src/: act.rs  main.rs
code/web/: Cargo.toml  Makefile  build.rs
code/web/app/: .gitignore  .terserrc  package.json  tsconfig.json
code/web/app/src/: app.scss  app.ts  data.jsx  index.html  index.js  index.scss  manifest.webmanifest
code/web/app/src/actions/: actionTypes.js  apiActions.js  authActions.js
code/web/app/src/api/: baseApi.js
code/web/app/src/assets/js/: material-dashboard.js
code/web/app/src/assets/js/core/: bootstrap-material-design.min.js
code/web/app/src/assets/scss/material-dashboard/: _cards.scss
code/web/app/src/assets/scss/material-dashboard/variables/: _brand.scss
code/web/app/src/assignments/: list.ts
code/web/app/src/auth/: auth-block.ts  auth-nav-item.ts
code/web/app/src/components/: App.jsx  AssignmentList.jsx  Auth.jsx  EditDialog.jsx  StrategyDetail.jsx  TraderList.jsx  links.js
code/web/app/src/components/app/: App.css  App.jsx  Dashboard.jsx  Home.jsx  listitems.jsx
code/web/app/src/components/assignment/: AssignmentList.jsx
code/web/app/src/components/status/: status.jsx
code/web/app/src/components/strategy/: StrategyDetail.jsx  StrategyList.jsx  list.jsx
code/web/app/src/components/trader/: list.jsx
code/web/app/src/components/traders/: TraderList.jsx
code/web/app/src/components/util/: Auth.jsx  EditDialog.jsx
code/web/app/src/comps_old/: EditDialog.jsx
code/web/app/src/comps_old/app/: AppNav.jsx  Dashboard.jsx
code/web/app/src/reducers/: dataReducer.js  infoReducer.js  rootReducer.js
code/web/app/src/store/: configure.js
code/web/app/src/strategies/: detail.ts  list.ts
code/web/app/src/traders/: list.ts
code/web/app/src/util/: ace-editor.ts  api.ts  notify.ts
code/web/app2/: 2  select
code/web/app2/src/: index.js
code/web/app2/src/actions/: apiActions.js
code/web/app2/src/components/: App.jsx  AppNav.jsx  AssignmentList.jsx  Dashboard.jsx  Login.jsx  StrategyList.jsx  listitems.js
code/web/app2/src/reducers/: rootReducer.js
code/web/app2/src/store/: configure.js
code/web/src/: main.rs  prelude.rs  utils.rs
code/web/src/assignments/: mod.rs
code/web/src/evaluations/: mod.rs
code/web/src/files/: mod.rs
code/web/src/ohlc/: mod.rs
code/web/src/pages/: mod.rs
code/web/src/root/: mod.rs
code/web/src/strategies/: mod.rs
code/web/src/traders/: mod.rs
code/web/src/trades/: mod.rs
code/web/src/users/: middleware.rs  mod.rs
code/web/src/users/pages/: login.rs  me.rs  mod.rs  signup.rs
code/web/static/: assignment-rows.js  init-editor.js  style.css  style.css.map  style.scss
code/web/static/app/: package.json  tsconfig.json
code/web/static/app/src/: api.ts  app.ts  index.html  login.ts  notify.ts  signup.ts  strat-detail.ts
code/web/static/app/src/strategies/: detail.ts  list.ts
code/web/static/app/src/util/: ace-editor.ts  api.ts
code/web/templates/: auth_block.rs.html  index.html  index.rs.html  layout.html  layout.rs.html
code/web/templates/assignments/: list.rs.html
code/web/templates/evaluations/: list.rs.html
code/web/templates/strategies/: detail.rs.html  list.rs.html
code/web/templates/traders/: list.rs.html
code/web/templates/users/: forgot_password.html  login.html  login.rs.html  me.html  me.rs.html  signup.html  signup.rs.html
cryptrader/: config.yaml
images/: base.tgz  builder.tgz  final.tgz  postgres.tgz  runner.tgz
ops/: additional.env  serviceaccount.yaml  web.yaml
thesis/: .gitignore  DP.vpp  DP.vpp.bak_000f  DP.vpp.bak_001d  DP.vpp.bak_002d  DP.vpp.bak_003d  DP.vpp.bak_004d  DP.vpp.bak_005d  DP.vpp.bak_006d  DP.vpp.bak_007d  DP.vpp.bak_008d  DP.vpp.bak_009d  DP.vpp.bak_010d  DP.vpp.bak_011d  DP.vpp.bak_012d  DP.vpp.bak_013d  DP.vpp.bak_014d  DP.vpp.bak_015d  DP.vpp.bak_016d  DP.vpp.bak_017d  DP.vpp.bak_018d  DP.vpp.bak_019d  DP.vpp.bak_020d  DP.vpp.bak_021d  DP.vpp.bak_022d  Makefile  books.txt  projekt-01-kapitoly-chapters.tex  projekt-20-literatura-bibliography.bib  projekt.fdb_latexmk  projekt.fls  projekt.tex  watch-build.sh
(+135 files in other folders)
