[package]
name = "actix-net"
version = "0.0.0"
authors = ["Michal Hornický <semtexzv@gmail.com>"]
edition = "2018"

[dependencies.common]
path = "../../common"


[dependencies]
serde = "1.0"
zmq = { git = "https://github.com/semtexzv/rust-zmq" } #"0.9"
trust-dns-resolver = "*"
futures = "0.1.*"
tokio = "0.1"
failure = "*"
uuid = { version = "*", features = ["v4","serde"] }
anymap = "*"
nix = "*"

[dependencies.tzmq]
package = "tokio-zmq"
git = "https://github.com/semtexzv/tokio-zmq"