[package]
name = "app"
version = "0.0.0"
authors = ["Michal Hornický <semtexzv@gmail.com>"]
edition = "2018"

[dependencies.common]
path = "../common"

[dependencies]
clap = { version = "*", default-features=false }
serde = { version ="*" }

strat-eval = { path = "../deps/strat-eval"}

apis = { path = "../deps/apis" }
db = { path = "../deps/db" }

radix_trie = { version = "*", default-features=false }
anymap = { version ="*", default-features=false }

