[package]
name = "common"
version = "0.0.0"
authors = ["Michal Hornický <semtexzv@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

lazy_static= "*"
env_logger="*"
log = "*"
failure = "*"
failure_derive="*"

bytes = { version = "*", features = ["serde"] }

futures = "*"
futures-retry = "*"

url = "*"
uuid = { version = "<0.7.0", features = ["v4","serde"] }

chrono = { version = "*", features = ["serde"]}
time = "*"
base64 = "*"

tokio = { version ="*"}

actix = { version = "0.7", default-features=false }
actix-web = { version = "*", features = ["tls", "session"]}
actix-async-await =  { path = "../deps/actix-async-await" }
