[package]
name = "common"
version = "0.0.0"
authors = ["Michal Hornický <semtexzv@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

lazy_static= "*"
dotenv = "0.14.1"
env_logger="*"
log = "*"
maplit = "*"

failure = "*"
failure_derive="*"

bytes = { version = "*", features = ["serde"] }

ak = "*"
anats = { package = "actix-nats" , path = "../deps/actix-nats" }

futures = {package = "futures-preview", version = "0.3.0-alpha.19", features = ["compat"]}
prometheus = "*"
itertools="*"

url = "*"
uuid = { version = "<0.7.0", features = ["v4","serde"] }

hmac = "*"
sha2 = "*"

chrono = { version = "*", features = ["serde"]}
base64 = "*"

