[package]
name = "eval"
version = "0.1.0"
authors = ["semtexzv <semtexzv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.common]
path = "../common"

[dependencies]
serde = { version ="*" }
db = { path = "../deps/db" }
strat-eval = { path = "../deps/strat-eval"}