[package]
name = "web"
version = "0.1.0"
authors = ["Michal Hornický <semtexzv@gmail.com>"]
edition = "2018"
build = "build.rs"


[dependencies.common]
path = "../common"


[build-dependencies]
ructe = "*"

[dependencies]
clap = "*"
serde = "*"

actix-web = "*"
actix-web-async-await = { path = "../deps/actix-web-async-await"}

actix-comm = { path = "../deps/actix-comm" }
actix-arch = { path = "../deps/actix-arch" }

apis = { path = "../deps/apis" }
db = { path = "../deps/db" }

ructe = { version = "*" , features = ["mime03", "sass"]}
mime = "0.3"


djangohashers = "^0.3"