[package]
name = "web"
version = "0.1.0"
authors = ["Michal Hornický <semtexzv@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies.common]
path = "../common"

[build-dependencies]
includedir = { path = "../deps/includedir"}

[dependencies]
clap = "*"
serde = "*"


apis = { path = "../deps/apis" }
db = { path = "../deps/db" }

mime = "0.3"
mime_guess = "2.0.0-alpha"

djangohashers = "^0.3"