[package]
name = "web"
version = "0.1.0"
authors = ["Michal Hornický <semtexzv@gmail.com>"]
edition = "2018"


[dependencies.common]
path = "../common"

[dependencies]
serde = "*"
db = { path = "../deps/db" }

mime = "0.3"
mime_guess = "2.0.1"

actix-web = { version = "=0.7", features = ["tls"]}
djangohashers = "^0.3"