[package]
name = "trader"
version = "0.1.0"
authors = ["Michal Hornický <semtexzv@gmail.com>"]

[dependencies]
dotenv = "*"
url = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

owning_ref = "0.3.3"

ta = { path = "../libs/ta-rs" }

common = { path = "../libs/common"}
db = { path = "../libs/db" }
apis = { path = "../libs/apis"}

diesel = { version = "*", features = ["sqlite","postgres"]}
diesel_derives = { version = "*", features = ["sqlite","postgres"]}

chrono = {version = "0.4.0", features = ["serde"] }
time = "0.1.38"
reqwest = "0.8.1"

hmac = "0.5.0"
sha2 = "*"
