[package]
name = "common"
version = "0.1.0"
authors = ["Michal Hornický <semtexzv@gmail.com>"]

[dependencies]
rand="*"
error-chain = "*"
lazy_static= "*"
maplit = "*"
newtype_derive = "0.1.6"
reqwest="*"
hyper="*"
base64 = "~0.6.0"

regex = "0.2"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_yaml = "*"

rmp-serde = "*"

rlua = "0.10.2" # { path = "../rlua" }
log = "0.3"
log4rs = "0.7.0"

#dotenv = "=0.9.0"

url = "*"
chrono = "*"

ta = { path = "../ta-rs"}
ws = { version= "*" , features = ["ssl"]}
time = "*"

zmq =  { git = "https://github.com/semtexzv/rust-zmq" }

futures-await = "*"
tokio-core="*"
rayon = "*"